Crunchbase Startup Investment Findings

--- a/Capstone_III_UL.ipynb
+++ b/Capstone_III_UL.ipynb
@@ -13132,6 +13132,21 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Cluster Findings:\n",
+    "Cluster3 (Successful Achievers): > $5MM in funding, lower participants, lower funding rounds and high post money valuation\n",
+    "Cluster5 (Underachievers): Lower post money valuation relative to total funding and low milestones reached\n",
+    "Cluster6 (Solid Operators): Highest milestones reached, highest participation rate, and highest post money valuation\n",
+    "Cluster0: (Cash Burners): Constant capital raising with low post money valuation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "colab_type": "text",
     "id": "G4r0IX5ETVr5",
     "slideshow": {
